--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0"
-  }
+  },
+  "homepage": "https://lumor9.github.io/site-portfolio"
 }
